Revision history for Perl extension MooseX-AttributeHelpers

{{$NEXT}}

0.24      2015-08-16 18:49:16Z
    - Don't rely on hash order in tests (RT#81564)
    - repository migrated to the GitHub Moose organization

0.23 Fri Jan 1, 2010
    - A small internals fix to prevent breakage with the next version of
      Moose. (Dave Rolsky)

0.22 Mon Sep 14, 2009
    - Fix to work with Moose 0.90. Ignore meta when auto-providing a method
      provider's methods. (Dave Rolsky)
	
0.21 Sun July 19, 2009
    - Add length to String (Florian Ragwitz).
    - Specify build dependency on Test::Moose (Closes RT#47258) (Florian Ragwitz).
    - Fix the error message you get on unknown 'curries' parameters to tell you
      what it really expected (Florian Ragwitz).
    - Doc typo fix in Collection::Bag (Sartak).

0.20 Thu June 25, 2009
    - MXAH is moving into core. This module will be deprecated when
      that finally happens.
    - Remove register_implementation methods from the traits because
      we don't want to conflict with cored AttributeHelpers. You'll need to
      specify the full package name for traits --
      MooseX::AttributeHelpers::Trait::Counter instead of Counter
    - New provided method for hashs: elements (Returns the key, value
      pairs in the hash as a flattened list) (plu)

0.19 Sun June 14, 2009
    - No functional changes from 0.18_01

0.18_01 Mon June 1, 2009
    - Turn our metaclasses into traits, though metaclasses still exist for
      backwards compatibility (Sartak and doy)
    - Add accessor to Hash and Array (Sartak)
    - Let the user know which constraint they have violated in the confessed
      message (nperez)

0.17 Fri April 19, 2009
    - Add defined to Hash (Evan Carroll).

0.16 Sun April 5, 2009
    - Add substr to String (Florian Ragwitz).

0.15 Thu March 26, 2009
    - The splice helper for arrays was completely broken. Reported by
      Abhijit Mahabal. RT #43343.

0.14 Thu October 2, 2008
    - Run pod tests only for authors
